--- a/odin-rps/styles.css
+++ b/odin-rps/styles.css
@@ -1,5 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 :root {
   --white: white;
+  /* 
+  #FFCD56 
+  #FFC5C5
+  */
 }
 
 *,
@@ -14,16 +20,23 @@
   border: 0;
   font: inherit;
   background: none;
-  background: rgba(146, 146, 146, 0.266);
-  outline: dotted 2px;
+  /* background: rgba(146, 146, 146, 0.266);
+  outline: dotted 2px; */
   list-style-type: none;
 }
 
 html {
+  background: #3f3b44;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
 }
 
 img,
@@ -32,4 +45,48 @@ svg,
 video {
   display: block;
   max-width: 100%;
+}
+
+h1 {
+  color: #ffd2d2;
+}
+
+strong {
+  font-weight: 700;
+  color: #fff;
+  font-size: 1.25rem;
+}
+
+.Options-wrapper {
+  display: flex;
+  gap: 1rem;
+}
+
+.Option {
+  background: #9ad5ff;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  color: #3f3b44;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.Option:hover {
+  box-shadow: 0px 0px 15px 0px #9ad5ff;
+}
+
+.Play {
+  display: flex;
+  background: #ffcd56;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  align-items: center;
+  gap: 0.25rem;
+  font-weight: 700;
+  color: #3f3b44;
+}
+
+.Play:hover {
+  box-shadow: 0px 0px 15px 0px #ffcd56;
 }
