--- a/odin-etch-a-sketch/styles.css
+++ b/odin-etch-a-sketch/styles.css
@@ -15,7 +15,7 @@
   font: inherit;
   background: none;
   background: rgba(146, 146, 146, 0.266);
-  outline: dotted 2px;
+  outline: dotted 1px;
   list-style-type: none;
 }
 
@@ -36,6 +36,7 @@ video {
 }
 
 .Test {
+  cursor: pointer;
 }
 
 .Grid {
