--- a/odin-etch-a-sketch/styles.css
+++ b/odin-etch-a-sketch/styles.css
@@ -14,8 +14,8 @@
   border: 0;
   font: inherit;
   background: none;
-  background: rgba(146, 146, 146, 0.266);
-  outline: dotted 1px;
+  /* background: rgba(146, 146, 146, 0.266);
+  outline: dotted 1px; */
   list-style-type: none;
 }
 
@@ -35,13 +35,15 @@ video {
   max-width: 100%;
 }
 
-.Test {
+.Cell {
   cursor: crosshair;
   user-select: none;
+  outline: 1px dotted #d9d9d9;
 }
 
 .Grid {
   display: grid;
   width: 20rem;
   height: 20rem;
+  outline: 1px dotted black;
 }
