--- a/odin-etch-a-sketch/styles.css
+++ b/odin-etch-a-sketch/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
 :root {
   --white: white;
 }
@@ -20,11 +22,17 @@
 }
 
 html {
+  background: rgb(35, 35, 35);
+  color: white;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
   min-height: 100vh;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 1rem;
 }
 
 img,
@@ -38,7 +46,7 @@ video {
 .Cell {
   cursor: crosshair;
   user-select: none;
-  outline: 1px dotted #d9d9d9;
+  outline: 1px dotted rgb(35, 35, 35);
 }
 
 .Grid {
@@ -46,4 +54,21 @@ video {
   width: 20rem;
   height: 20rem;
   outline: 1px dotted black;
+  background: lightgray;
+}
+
+#Brush-color {
+  height: 3rem;
+
+  opacity: 0;
+  cursor: pointer;
+}
+
+.Brush-color-wrapper {
+  height: 2rem;
+  width: 2rem;
+  border-radius: 3rem;
+  /* border: 2px solid lightgray; */
+  cursor: pointer;
+  overflow: hidden;
 }
