--- a/odin-etch-a-sketch/styles.css
+++ b/odin-etch-a-sketch/styles.css
@@ -65,15 +65,15 @@ h1 {
 }
 
 #Brush-color {
-  height: 3rem;
+  height: 5rem;
 
   opacity: 0;
   cursor: pointer;
 }
 
 .Brush-color-wrapper {
-  height: 2rem;
-  width: 2rem;
+  height: 3rem;
+  width: 3rem;
   border-radius: 3rem;
   /* border: 2px solid lightgray; */
   cursor: pointer;
@@ -121,6 +121,7 @@ h1 {
   align-items: center;
   cursor: pointer;
   border-radius: 0.5rem;
+  justify-content: center;
 }
 
 .Tools-wrapper:hover {
@@ -145,4 +146,8 @@ h1 {
   cursor: pointer;
   align-self: center;
   margin-top: 2rem;
+}
+
+.Reset:hover {
+  box-shadow: 0px 0px 20px red;
 }
