--- a/odin-library/styles.css
+++ b/odin-library/styles.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap");
+
 :root {
   --white: white;
+  --black: black;
 }
 
 *,
@@ -14,16 +17,21 @@
   border: 0;
   font: inherit;
   background: none;
-  background: rgba(146, 146, 146, 0.266);
-  outline: dotted 2px;
+  /* background: rgba(146, 146, 146, 0.266);
+  outline: dotted 2px; */
   list-style-type: none;
+  color: var(--white);
 }
 
 html {
+  font-family: "Roboto Mono", monospace;
+  font-weight: 400;
+  background: var(--black);
 }
 
 body {
   min-height: 100vh;
+  padding: 1rem;
 }
 
 img,
@@ -32,4 +40,65 @@ svg,
 video {
   display: block;
   max-width: 100%;
+}
+
+input {
+  padding: 0.25rem;
+  border-bottom: 3px solid var(--white);
+}
+
+input:focus {
+  outline: none;
+  border-color: yellowgreen;
+}
+
+label {
+  font-size: 0.8rem;
+}
+
+button {
+  padding: 0.25rem;
+  width: fit-content;
+  border: 1px solid var(--white);
+  cursor: pointer;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+.logo {
+  color: greenyellow;
+  font-size: 2rem;
+}
+
+.addBook {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  background: var(--black);
+  margin-bottom: 1rem;
+}
+
+.inputWrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.book {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  border: 1px solid var(--white);
+  background: var(--black);
+}
+
+.delete {
+  padding: 0.25rem;
+  background: red;
+  width: fit-content;
+  cursor: pointer;
 }
