--- a/odin-calculator/styles.css
+++ b/odin-calculator/styles.css
@@ -1,5 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap");
 :root {
   --white: white;
+  --dark-blue: #3b4664;
+  --very-dark-blue: #181f32;
+  --darker-blue: #252d44;
+  --blue: #647299;
+  --cream: #eae3db;
+  --tan: #b1a39a;
+  --blue-shadow: #3f4b71;
+  --red: #d13f30;
+  --dark-red: #962213;
 }
 
 *,
@@ -14,16 +24,25 @@
   border: 0;
   font: inherit;
   background: none;
-  background: rgba(146, 146, 146, 0.266);
-  outline: dotted 2px;
+  /* background: rgba(146, 146, 146, 0.266);
+  outline: dotted 2px; */
   list-style-type: none;
 }
 
 html {
+  background: var(--dark-blue);
+  font-family: "League Spartan", sans-serif;
+  color: var(--white);
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 
 body {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 img,
@@ -32,4 +51,66 @@ svg,
 video {
   display: block;
   max-width: 100%;
+}
+
+.calc-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.display-wrapper {
+  display: flex;
+  flex-direction: column;
+  background: var(--very-dark-blue);
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  gap: 0.25rem;
+}
+
+.expression {
+  font-size: 0.75rem;
+  font-weight: 400;
+  text-align: right;
+}
+
+.num-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  background-color: var(--darker-blue);
+  gap: 0.75rem;
+  cursor: pointer;
+  padding: 0.75rem;
+  border-radius: 0.25rem;
+}
+
+.numInput,
+.operatorInput,
+.decimal,
+.backspace {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+}
+
+.numInput,
+.operatorInput,
+.decimal {
+  background: var(--cream);
+  color: var(--dark-blue);
+}
+
+.backspace {
+  background: var(--blue);
+}
+
+.clear {
+  background: var(--red);
+  grid-column: 1 / span 4;
+  text-align: center;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
 }
