--- a/odin-tic-tac-toe/styles.css
+++ b/odin-tic-tac-toe/styles.css
@@ -14,7 +14,7 @@
 }
 
 * {
-  outline: dotted 2px;
+  /* outline: dotted 2px; */
   margin: 0;
   padding: 0;
   border: 0;
@@ -31,6 +31,11 @@ html {
 
 body {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  padding: 1rem;
 }
 
 img,
@@ -94,6 +99,12 @@ button:hover {
   outline: 2px solid;
 }
 
+.changeMarkerWrapper {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
 .gameBoard {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -108,6 +119,12 @@ button:hover {
   justify-content: center;
   font-weight: 700;
   font-size: 3rem;
+  outline: 1px solid;
+}
+
+.result {
+  font-weight: 700;
+  height: 1rem;
 }
 
 .reset {
